--- a/css/media.css
+++ b/css/media.css
@@ -114,7 +114,7 @@
     .Doctors-wrapper{
       display: flex;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: flex-start;
     }
     .doctor-card{
@@ -217,7 +217,7 @@
     .Doctors-wrapper{
       display: flex;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: flex-start;
     }
     
